<resources>
    <string name="app_name">Bookhub</string>
    <string name="dashboard">Dashboard</string>
    <string name="Favourites">Favourites</string>
    <string name="Profile">profile</string>
    <string name="About_app">About app</string>
    <string name="Navigation">Navigation drawer</string>
    <string name="opendrawer">open drawer</string>
    <string name="closedrawer">close drawer</string>
    <string name="facebook_app_id">264585901522551</string>
    <string name="fb_login_protocol_scheme">fb264585901522551</string>



    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dashboard_fragment">LIST</string>
    <string name="fragment_favourite">Favourite fragment</string>
    <string name="profile_fragment">Profile fragment</string>
    <string name="about_fragment">About App</string>
    <string name="sort">Sort</string>
    <string name="mobile_no">Email</string>
    <string name="full_name">Full Name</string>
    <string name="phone_no">Mobile No.</string>
    <string name="user_preferences">USER</string>
    <string name="avenger_preferences">user</string>
</resources>
